# dredger

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs
src/client/: client.rs
src/core/: actions.rs
src/github_client/: client.rs  data.rs
src/ollama_client/: client.rs  mod.rs  prompt_templates.rs  utils.rs
src/utils/: cli.rs  errors.rs  mod.rs  tokens.rs
