[package]
name = "dredger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "3", features = ["derive"] }
colored = "3.0.0"
mockito = "0.30"
assert_cmd = "2.0"
tempfile = "3.3"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
tokenizers = "0.21.0"
